@@ -124,14 +124,6 @@ L<Google RE2 Syntax|https://github.com/google/re2/wiki/Syntax>
 
 =head1 Fields
 
-=head2 captures
-
-  has captures : ro string[];
-
-The captured strings.
-
-This field is deprecated and will be removed.
-
 =head1 Class Methods
 
 =head2 new
@@ -279,164 +271,6 @@ The replacement is performed on the string buffer.
 The same as L</"replace_common">, but the first argument is a L<StringBuffer|SPVM::StringBuffer> object, and the return type is void.
 
 The replacement is performed on the string buffer.
-
-=head2 cap1
-
-  method cap1 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[1]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap2
-
-  method cap2 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[2]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap3
-
-  method cap3 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[3]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap4
-
-  method cap4 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[4]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap5
-
-  method cap5 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[5]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap6
-
-  method cap6 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[6]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap7
-
-  method cap7 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[7]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap8
-
-  method cap8 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[8]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap9
-
-  method cap9 : string ();
-The alias for C<$re-E<gt>captures-E<gt>[9]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap10
-
-  method cap10 : string ();
-The alias for C<$re-E<gt>captures-E<gt>[10]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap11
-
-  method cap11 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[11]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap12
-
-  method cap12 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[12]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap13
-
-  method cap13 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[13]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap14
-
-  method cap14 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[14]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap15
-
-  method cap15 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[15]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap16
-
-  method cap16 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[16]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap17
-
-  method cap17 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[17]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap18
-
-  method cap18 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[18]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap19
-
-  method cap19 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[19]>.
-
-This method is deprecated and will be removed.
-
-=head2 cap20
-
-  method cap20 : string ();
-
-The alias for C<$re-E<gt>captures-E<gt>[20]>.
-
-This method is deprecated and will be removed.
 
 =head1 Repository
 
