@@ -15,7 +15,6 @@ class Regex {
   use List;
   
   has re2 : Regex::Re2;
-  has captures : ro string[];
   
   static method new : Regex ($pattern : string, $flags : string = undef) {
     
@@ -104,27 +103,6 @@ class Regex {
     
     return $regex_match;
   }
-  
-  method cap1 : string () { return $self->captures->[1]; }
-  method cap2 : string () { return $self->captures->[2]; }
-  method cap3 : string () { return $self->captures->[3]; }
-  method cap4 : string () { return $self->captures->[4]; }
-  method cap5 : string () { return $self->captures->[5]; }
-  method cap6 : string () { return $self->captures->[6]; }
-  method cap7 : string () { return $self->captures->[7]; }
-  method cap8 : string () { return $self->captures->[8]; }
-  method cap9 : string () { return $self->captures->[9]; }
-  method cap10 : string () { return $self->captures->[10]; }
-  method cap11 : string () { return $self->captures->[11]; }
-  method cap12 : string () { return $self->captures->[12]; }
-  method cap13 : string () { return $self->captures->[13]; }
-  method cap14 : string () { return $self->captures->[14]; }
-  method cap15 : string () { return $self->captures->[15]; }
-  method cap16 : string () { return $self->captures->[16]; }
-  method cap17 : string () { return $self->captures->[17]; }
-  method cap18 : string () { return $self->captures->[18]; }
-  method cap19 : string () { return $self->captures->[19]; }
-  method cap20 : string () { return $self->captures->[20]; }
   
   method replace_v2 : Regex::ReplaceInfo ($string_ref_or_buffer : object of string[]|StringBuffer, $replace : object of string|Regex::Replacer, $offset_ref : int* = undef, $length : int = -1, $options : object[] = undef) {
     
