@@ -5,6 +5,9 @@
     * Remove Regex#match_start field.
     * Remove Regex#match_length field.
     * Remove Regex#replaced_count field.
+    * Remove Regex#captures field.
+    * Remove Regex#cap1 to cap20 methods.
+    
 0.245 2025-01-17
   [Changes]
     * Load Resource::RE2 class.
